[gd_scene load_steps=13 format=3 uid="uid://mrjjviudw1s7"]

[ext_resource type="Script" path="res://civilian/civilian.gd" id="1_kqpa8"]
[ext_resource type="Texture2D" uid="uid://bwglvjopwx8od" path="res://sprites/guard-back.png" id="2_yos5b"]
[ext_resource type="Texture2D" uid="uid://cannqyya6hvfx" path="res://sprites/guard-front.png" id="3_av54v"]
[ext_resource type="Texture2D" uid="uid://c7neoc8onpoic" path="res://sprites/guard-side.png" id="4_ewi87"]
[ext_resource type="Texture2D" uid="uid://138qkmchlqlv" path="res://sprites/guard-controlled-back.png" id="5_41ovk"]
[ext_resource type="Texture2D" uid="uid://c8n5qdii1rj5v" path="res://sprites/guard-controlled-front.png" id="6_kf17j"]
[ext_resource type="Texture2D" uid="uid://cjpy3cfhyaxeh" path="res://sprites/guard-controlled-side.png" id="7_coghe"]
[ext_resource type="Texture2D" uid="uid://ckhxahv2h4810" path="res://sprites/bang.png" id="8_67y5s"]
[ext_resource type="Texture2D" uid="uid://bndecn7wyft7q" path="res://sprites/interro.png" id="9_lurdh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fowfa"]
radius = 13.0
height = 62.0

[sub_resource type="SpriteFrames" id="SpriteFrames_u2cts"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_yos5b")
}],
"loop": true,
"name": &"back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_av54v")
}],
"loop": true,
"name": &"front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ewi87")
}],
"loop": true,
"name": &"side",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ni3v8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_41ovk")
}],
"loop": true,
"name": &"back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_kf17j")
}],
"loop": true,
"name": &"front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_coghe")
}],
"loop": true,
"name": &"side",
"speed": 5.0
}]

[node name="Civilian" type="PathFollow2D" node_paths=PackedStringArray("body", "nav_agent", "uncontrolled_sprite", "controlled_sprite", "bang_sprite", "interro_sprite", "stun_timer", "suspicious_timer") groups=["civilian"]]
rotates = false
script = ExtResource("1_kqpa8")
body = NodePath("CharacterBody2D")
nav_agent = NodePath("CharacterBody2D/NavigationAgent2D")
uncontrolled_sprite = NodePath("CharacterBody2D/UncontrolledSprite")
controlled_sprite = NodePath("CharacterBody2D/ControlledSprite")
bang_sprite = NodePath("CharacterBody2D/BangSprite")
interro_sprite = NodePath("CharacterBody2D/InterroSprite")
stun_timer = NodePath("StunTimer")
suspicious_timer = NodePath("SuspiciousTimer")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("CapsuleShape2D_fowfa")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="CharacterBody2D"]
path_desired_distance = 10.0
target_desired_distance = 1.0

[node name="UncontrolledSprite" type="AnimatedSprite2D" parent="CharacterBody2D"]
texture_filter = 1
scale = Vector2(1.17, 1.17)
sprite_frames = SubResource("SpriteFrames_u2cts")
animation = &"side"

[node name="ControlledSprite" type="AnimatedSprite2D" parent="CharacterBody2D"]
visible = false
texture_filter = 1
scale = Vector2(1.17, 1.17)
sprite_frames = SubResource("SpriteFrames_ni3v8")
animation = &"side"

[node name="BangSprite" type="Sprite2D" parent="CharacterBody2D"]
visible = false
texture_filter = 1
position = Vector2(-4.76837e-07, -54)
scale = Vector2(0.574074, 0.533898)
texture = ExtResource("8_67y5s")

[node name="InterroSprite" type="Sprite2D" parent="CharacterBody2D"]
visible = false
texture_filter = 1
position = Vector2(1.625, -57.375)
scale = Vector2(0.645833, 0.577206)
texture = ExtResource("9_lurdh")

[node name="StunTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="SuspiciousTimer" type="Timer" parent="."]
one_shot = true

[connection signal="mouse_entered" from="CharacterBody2D" to="." method="_on_character_body_2d_mouse_entered"]
[connection signal="mouse_exited" from="CharacterBody2D" to="." method="_on_character_body_2d_mouse_exited"]
[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
[connection signal="timeout" from="SuspiciousTimer" to="." method="_on_suspicious_timer_timeout"]
